<?xml version="1.0" encoding="utf-8"?>
<ScrollView>
    
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ap_title" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_homeScreen"
        android:textColor="@color/labelGreyColor" />

    <Button
        android:id="@+id/button1"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn"
        android:text="@string/btn_central"
        android:textColor="@color/btnTextColor" />

    <Button
        android:id="@+id/button2"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:text="@string/btn_north"
        android:textColor="@color/btnTextColor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/label_tip"
        android:textAppearance="@style/shadow"
        android:textColor="@color/labelBlueColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/instructions"
        android:textColor="@color/labelGreyColor" />
</LinearLayout>

</ScrollView>